# deca_auto_gui

./: .gitignore  README.md  default_config.toml  pyproject.toml  user_config.toml
src/deca_auto/: __init__.py  __main__.py  capacitor.py  config.py  evaluator.py  excel_out.py  interface.py  main.py  pdn.py  utils.py
